# update-release-branch

./: .dive.yaml  .editorconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  .renovaterc.json  Dockerfile  README.md  action.yml  justfile  pyproject.toml  update-release-branch.py
.github/actions/check/: action.yml
.github/actions/init-build/: action.yml
.github/actions/init-docker/: action.yml
.github/actions/set-version/: action.yml
.github/workflows/: ci.yml  release.yml
